--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,11 +53,11 @@ general {
     layout=dwindle
     sensitivity=1.0 # for mouse cursor
 
-    gaps_in=11.8
-    gaps_out=15.5
-    border_size=3
-    col.active_border=0xffffffff
-    col.inactive_border=0x66333333
+    gaps_in=5
+    gaps_out=5
+    border_size=2
+    col.active_border=0xfff38ba8
+    col.inactive_border=0xffffffff
 
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
@@ -78,7 +78,7 @@ decoration {
     }
     drop_shadow=true
     shadow_range=0
-    col.shadow=0xffffffff #86AAEC
+    col.shadow=0xfff5c2e7 #86AAEC
     col.shadow_inactive=0x50000000
 }
 
@@ -136,6 +136,7 @@ windowrule=float,title:^(fly_is_kitty)$
 windowrule=animation popin,Rofi
 
 
+windowrule = opacity 0.7,^(firefox)$
 windowrule = opacity 0.7,^(sprotify)$
 windowrule = opacity 0.7,^(vesktop)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
