--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ exec-once=waybar
 # Notification 
 exec-once=dunst
 # Wallpaper
-exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/AnimeWaiting.png -m fill
+exec-once=swaybg -o \* -i ~/.config/hypr/wallpapers/SaturnCatppuccin.png -m fill
 # For screen sharing 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # For keyboard 
@@ -83,7 +83,7 @@ decoration {
 }
 
 # Blur for waybar 
-blurls=waybar
+#blurls=waybar
 
 
 animations {
@@ -136,9 +136,11 @@ windowrule=float,title:^(fly_is_kitty)$
 windowrule=animation popin,Rofi
 
 
-windowrule = opacity 0.7,^(firefox)$
-windowrule = opacity 0.7,^(sprotify)$
-windowrule = opacity 0.7,^(vesktop)$
+#windowrule = opacity 0.7,^(WebCord)$
+#windowrule = opacity 0.7,^(chromium)$
+#windowrule = opacity 0.7,^(firefox)$
+#windowrule = opacity 0.7,^(Spotify)$
+#windowrule = opacity 0.7,^(vesktop)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
 windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
@@ -150,11 +152,11 @@ windowrulev2 = float,class:^(geeqie)$
 windowrulev2 = tile,class:^(neovide)$
 
 # Increase the opacity 
-windowrule=opacity 0.92,Thunar
+#windowrule=opacity 0.92,Thunar
 #windowrule=opacity 0.1,Vesktop
-windowrule=opacity 0.9,VSCodium
-windowrule=opacity 0.88,obsidian
-windowrule=opacity 0.7,neovide
+#windowrule=opacity 0.9,VSCodium
+#windowrule=opacity 0.88,obsidian
+#windowrule=opacity 0.7,neovide
 
 #^.*nvim.*$
 windowrule=opacity 1,neovim
